--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Taimur.dev</title>
-    <link rel="stylesheet" href="../CSS/home1.css">
+    <link rel="stylesheet" href="../CSS/index.css">
   </head>
   <body class="open-sans-normal">
     <div class="main">
