fixed hosting error

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Taimur.dev</title>
-    <link rel="stylesheet" href="../CSS/index.css">
+    <link rel="stylesheet" href="CSS/index.css">
   </head>
   <body class="open-sans-normal">
     <div class="main">
@@ -37,7 +37,7 @@
             </div>
             <img
               class="banner-profile-pic"
-              src="../assets/images/croped2.png"
+              src="assets/images/croped2.png"
               alt=""
             />
           </div>
@@ -71,22 +71,22 @@
                 <p class="what-i-do-des">I’m a designer and developer specializing in web design, data input, and visual content creation. I fix and enhance presentations, manage and organize data, and create clean, functional websites that deliver real value to users. My work blends creativity and precision to meet client needs on time and within budget.</p>
                 <div class="skills">
                     <div class="js">
-                        <img class="skills-pic" src="../assets/images/icons/js.png" alt="">
+                        <img class="skills-pic" src="assets/images/icons/js.png" alt="">
                         <p class="skills-title">JavaScript</p>
                         <p class="skills-des">Beginner in JavaScript — learning fundamentals, building interactive web features, and improving coding skills through hands-on projects.</p>
                     </div>
                     <div class="react">
-                        <img class="skills-pic" src="../assets/images/icons/react.png" alt="">
+                        <img class="skills-pic" src="assets/images/icons/react.png" alt="">
                         <p class="skills-title">React</p>
                         <p class="skills-des">Beginner in React — learning component-based development to build interactive and dynamic web applications.</p>
                     </div>
                     <div class="node">
-                        <img class="skills-pic" src="../assets/images/icons/nodejs.png" alt="">
+                        <img class="skills-pic" src="assets/images/icons/nodejs.png" alt="">
                         <p class="skills-title">Node.js</p>
                         <p class="skills-des">Beginner in Node.js — exploring backend development and building server-side applications with JavaScript.</p>
                     </div>
                     <div class="mongodb">
-                        <img class="skills-pic" src="../assets/images/icons/mongo.png" alt="">
+                        <img class="skills-pic" src="assets/images/icons/mongo.png" alt="">
                         <p class="skills-title">MongoDB</p>
                         <p class="skills-des">Beginner in MongoDB — learning NoSQL database concepts and managing data for web applications.</p>
                     </div>
