Added Custom footer

--- a/index.html
+++ b/index.html
@@ -94,7 +94,10 @@
             </div>
         </div>
       </main>
-      <footer><p></p></footer>
+      <footer class="fun-footer">
+      Made with ☕💻 and the occasional existential crisis 🤯<br />
+      © MD Shoaib Taimur 🚀✨
+    </footer>
     </div>
   </body>
 </html>
